--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,17 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.45</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>23.0</version>
+        </dependency>
+        <!--guava重试工具类-->
+        <dependency>
+            <groupId>com.github.rholder</groupId>
+            <artifactId>guava-retrying</artifactId>
+            <version>2.0.0</version>
+        </dependency>
 
     </dependencies>
 
