--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,13 @@ app.id=nxmmportal
 apollo.meta=http://10.236.210.20:8080
 #自定义缓存路径
 #apollo.cacheDir=/opt/data/apollo-cache
+
+#日期格式化输出
+spring.jackson.date-format=yyyy-MM-dd
+spring.jackson.time-zone=GMT+8
+spring.jackson.serialization.write-dates-as-timestamps=false
+
+#日志配置
+logging.level.root=info
+logging.file=logs/service.log
+logging.level.org.apache.commons.beanutils=off
