--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <properties>
         <java.version>1.8</java.version>
         <spring-boot-admin.version>2.1.1</spring-boot-admin.version>
+        <easyexcel.version>1.1.2-beta4</easyexcel.version>
     </properties>
 
     <dependencies>
@@ -35,6 +36,10 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j</artifactId>
+        </dependency>
 
         <!--apollop配置中心-->
         <dependency>
@@ -42,6 +47,13 @@
             <artifactId>apollo-client</artifactId>
             <version>1.1.0</version>
         </dependency>
+        <!--阿里解析excel 工具类-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>${easyexcel.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>com.alibaba</groupId>
