--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,16 @@ server.port=8800
 
 app.id=nxmmportal
 
+#apollo配置中心配置
 apollo.meta=http://10.236.210.20:8080
 #自定义缓存路径
 #apollo.cacheDir=/opt/data/apollo-cache
+
+#spring线程池
+task-executor.core_pool_size=5
+task-executor.max_pool_size=10
+task-executor.queue-capacity=20
+task-executor.name-prefix=async-service-
 
 #日期格式化输出
 spring.jackson.date-format=yyyy-MM-dd
