--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <java.version>1.8</java.version>
         <spring-boot-admin.version>2.1.1</spring-boot-admin.version>
         <easyexcel.version>1.1.2-beta4</easyexcel.version>
+        <jmockdata.version>4.1.2</jmockdata.version>
     </properties>
 
     <dependencies>
@@ -50,7 +51,6 @@
             <version>${easyexcel.version}</version>
         </dependency>
 
-
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
@@ -67,7 +67,12 @@
             <artifactId>guava-retrying</artifactId>
             <version>2.0.0</version>
         </dependency>
-
+        <!--数据模拟-->
+        <dependency>
+            <groupId>com.github.jsonzou</groupId>
+            <artifactId>jmockdata</artifactId>
+            <version>${jmockdata.version}</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
