Mod 返回数据过滤null值

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,8 @@ task-executor.name-prefix=async-service-
 spring.jackson.date-format=yyyy-MM-dd
 spring.jackson.time-zone=GMT+8
 spring.jackson.serialization.write-dates-as-timestamps=false
+# null 类型的数据不返回
+spring.jackson.default-property-inclusion=non_null
 
 #日志配置
 logging.level.root=info
